feat: 添加同步音乐元数据